--- a/Compoze.csproj
+++ b/Compoze.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="electronnet.api" Version="13.5.1" />
+    <PackageReference Include="ElectronNET.API" Version="13.5.1" />
   </ItemGroup>
 
 </Project>
