--- a/CompozeElectron/Properties/launchSettings.json
+++ b/CompozeElectron/Properties/launchSettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:8000"
+      }
+    }
+  },
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
