--- a/CompozeElectron/Properties/launchSettings.json
+++ b/CompozeElectron/Properties/launchSettings.json
@@ -26,7 +26,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7020;http://localhost:5197",
+      "applicationUrl": "http://localhost:8001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
